--- a/manuals/libvsapm.3
+++ b/manuals/libvsapm.3
@@ -1,4 +1,4 @@
-.Dd June 11, 2021
+.Dd August 21, 2021
 .Dt libvsapm 3
 .Os libvsapm
 .Sh NAME
@@ -90,6 +90,8 @@ Partition functions
 .Fn libvsapm_partition_get_type_string "libvsapm_partition_t *partition" "char *string" "size_t string_size" "libvsapm_error_t **error"
 .Ft int
 .Fn libvsapm_partition_get_volume_offset "libvsapm_partition_t *partition" "off64_t *volume_offset" "libvsapm_error_t **error"
+.Ft int
+.Fn libvsapm_partition_get_status_flags "libvsapm_partition_t *partition" "uint32_t *status_flags" "libvsapm_error_t **error"
 .Ft ssize_t
 .Fn libvsapm_partition_read_buffer "libvsapm_partition_t *partition" "void *buffer" "size_t buffer_size" "libvsapm_error_t **error"
 .Ft ssize_t
