--- a/documentation/Apple partition map (APM) format.asciidoc
+++ b/documentation/Apple partition map (APM) format.asciidoc
@@ -32,7 +32,7 @@ for the libvsapm project.
 == License
 
 ....
-Copyright (C) 2009-2021, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2009-2023, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -49,6 +49,7 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.1 | J.B. Metz | February 2009 | Initial version.
 | 0.0.2 | J.B. Metz | January 2016 | Switched to asciidoc format.
 | 0.0.3 | J.B. Metz | May 2021 | Changes to formatting.
+| 0.0.4 | J.B. Metz | May 2023 | Additional information about status flags.
 |===
 
 :numbered:
@@ -235,6 +236,10 @@ The partition status flags consists of the following values:
 | 0x40000000 | | Automatic mount at startup
 | 0x80000000 | | Is startup partition
 |===
+
+
+[NOTE]
+Note that the "is in use" status flags does not appear to be used consistently.
 
 :numbered!:
 [appendix]
